<?xml version="1.0"?>
<package format="2">

  <name>uvdar_ros_driver</name>
  <version>0.0.1</version>
  <description>ROS driver for UVDAR modules</description>

  <maintainer email="vojnar@fly4future.com">Jan Vojnar</maintainer>


  <license>BSD 3-Clause</license>

  <author email="vojnar@fly4future.com">Jan Vojnar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>nodelet</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
